# empi

./: .gitignore  CMakeLists.txt  Makefile  README.md  build-standalone.sh  run-benchmark.sh
.github/workflows/: cmake-multi-platform.yml
demo/: README.txt  demo_mp.m  demo_mp.py  input_generator.py  input_smp.db
env/: zip.sh
env/lin32/: empi-lin32
env/lin64/: empi-lin64
env/osx64/: empi-osx64
inc/: base.hpp  classes.hpp  conf.hpp  fftw.hpp  gabor.hpp  heap.hpp  io.hpp  mmp.hpp  timer.hpp
include/: Array.h  Atom.h  Block.h  BlockAtom.h  BlockAtomBase.h  BlockAtomCache.h  BlockAtomObjective.h  BlockAtomProductCalculator.h  BlockDictionary.h  BlockDictionaryStructure.h  BlockHelper.h  BlockInterface.h  BlockStructure.h  BookWriter.h  BufferedWriter.h  CUDA.h  Computer.h  Configuration.h  Corrector.h  DeltaAtom.h  DeltaDictionary.h  Dictionary.h  EpochIndex.h  ExportedAtom.h  ExtenderLoop.h  ExtraData.h  Extractor.h  Family.h  File.h  GaussianFamily.h  IndexRange.h  Logger.h  Minimizer.h  OptimizationMode.h  PinnedArray.h  Progress.h  ProtoRequest.h  Semaphore.h  SignalReader.h  SpectrogramCalculator.h  (+17 more)
src/: Block.cpp  BlockAtom.cpp  BlockAtomBase.cpp  BlockAtomCache.cpp  BlockAtomObjective.cpp  BlockAtomProductCalculator.cpp  BlockDictionary.cpp  BlockDictionaryStructure.cpp  BlockHelper.cpp  BookWriter.cpp  BufferedWriter.cpp  Computer.cpp  Configuration.cpp  Corrector.cpp  DeltaAtom.cpp  DeltaDictionary.cpp  ExportedAtom.cpp  Extractor.cpp  Family.cpp  File.cpp  GaussianFamily.cpp  IndexRange.cpp  Logger.cpp  Progress.cpp  SignalReader.cpp  SpectrogramCalculatorCUDA.cu  SpectrogramCalculatorCUDACallback.cu  SpectrogramCalculatorDummy.cpp  SpectrogramCalculatorFFTW.cpp  Thread.cpp  Timer.cpp  TriangularFamily.cpp  Types.cpp  Worker.cpp  WorkerCUDA.cu  WorkerCUDACallback.cu  WorkerDummy.cpp  WorkerFFTW.cpp  classes.cpp  conf.cpp  (+5 more)
src/special/: alloc.cpp  alloc.cu  empi.cpp
tests/: .gitignore  Makefile  test-allocation.cpp  test-best-match.cpp  test-block-atom.cpp  test-block.cpp  test-book-writer.cpp  test-computer.cpp  test-corrector.cpp  test-dictionary.cpp  test-envelope.cpp  test-fftw.cpp  test-heap.cpp  test-index-range.cpp  test-measure.cpp  test-move-semantics.cpp  test-product-calculator.cpp  test-rounding.cpp  test-signal-reader.cpp  test-subsample.cpp  test-task-queue.cpp  test-worker.cpp
tests/special/: benchmark.cpp  test-cuda.cpp
utils/: .gitignore  Makefile  book_importer.py  readbook.cpp
